[workspace]
resolver = "3"
members = [
    "async_rust/chapter_1/1_fib_blocking",
    "async_rust/chapter_1/2_requests_blocking",
    "async_rust/chapter_1/3_process_per_connection/connection",
    "async_rust/chapter_1/3_process_per_connection/process_spawner",
    "async_rust/chapter_1/3_process_per_connection/server",
    "async_rust/chapter_1/4_what_are_threads",
    "async_rust/chapter_1/5_threads_and_condvar",
    "async_rust/chapter_1/6_file_io",
    "async_rust/chapter_1/7_improving_http_request_performance_with_async",
    "async_rust/chapter_2/1_understanding_tasks",
    "async_rust/chapter_2/2_futures",
    "async_rust/chapter_2/3_pinning_futures",
]
